xml/src1/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Association_Other_Specify__c</fullName>
        <inlineHelpText>Enter Association name if not found on drop down list</inlineHelpText>
        <label>Association Other Specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <description>Association</description>
        <inlineHelpText>Association</inlineHelpText>
        <label>Association</label>
        <picklist>
            <picklistValues>
                <fullName>American Association of Marriage and Family Therapists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Association of Pastoral Counselors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Association on Intellectual and Developmental Disabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Correctional Chaplains Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Mental Health Counselors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association for Clinical Pastoral Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association of Pastoral Chaplains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association of Professional Chaplains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Pastoral Supervision and Psychotherapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intentional Growth Center (IGC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Coach Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Conference of Police Chaplains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Association of Veterans Affairs Chaplains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Institute of Business and Industrial Chaplaincy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pan Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Annual Conference (TAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The UMEA Memberships and Associations for a contact</description>
        <inlineHelpText>The UMEA Memberships and Associations for a contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships and Associations</relationshipLabel>
        <relationshipName>Memberships_and_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date a membership ends.</description>
        <inlineHelpText>The date a membership ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <description>Membership Type</description>
        <inlineHelpText>Select membership type</inlineHelpText>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date a membership begins.</description>
        <inlineHelpText>The date a membership begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_State_Licensure__c</fullName>
        <description>Type of State Licensure</description>
        <inlineHelpText>If State Licensure is selected from Association, enter full name of State Licensure type here.</inlineHelpText>
        <label>Type of State Licensure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Memberships and Associations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Member-{00000000}</displayFormat>
        <label>Membership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships and Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Association_Other</fullName>
        <active>true</active>
        <description>If the &apos;Association&apos; is &apos;Other/Specify&apos; .Then user should enter a value in the &apos;Association Other specify&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( Association__c ,&quot;Other/Specify&quot;) , ISBLANK(  Association_Other_Specify__c  ) )</errorConditionFormula>
        <errorDisplayField>Association_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Association Other Specify&apos; may contain a value, If Association is &apos;Other/specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assocition_Disable_AssociationOther</fullName>
        <active>true</active>
        <description>If the &apos;Association&apos; is not &apos;Other/Specify&apos; .Then user should not enter a value in the &apos;Association Other specify&apos;</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL( Association__c ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(  Association_Other_Specify__c  ) ))</errorConditionFormula>
        <errorDisplayField>Association_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Association Other Specify&apos; may not contain a value, If Association is not &apos;Other/specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assocition_Disable_StateLicensure</fullName>
        <active>true</active>
        <description>If the &apos;Association&apos; is not &apos;StateLicensure&apos; .Then user should not enter a value in the &apos;Type of State Licensure&apos;</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(  Association__c ,&quot;State Licensure&quot;)) ,NOT( ISBLANK(  Type_of_State_Licensure__c  ) ))</errorConditionFormula>
        <errorDisplayField>Type_of_State_Licensure__c</errorDisplayField>
        <errorMessage>&apos;Type of State Licensure&apos; may not contain a value, If Association is not  &apos;State Licensure&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assocition_StateLicensure</fullName>
        <active>true</active>
        <description>If the &apos;Association&apos; is &apos;StateLicensure&apos; .Then user should enter a value in the &apos;Type of State Licensure&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(  Association__c  ,&quot;State Licensure&quot;) , ISBLANK(  Type_of_State_Licensure__c  ) )</errorConditionFormula>
        <errorDisplayField>Type_of_State_Licensure__c</errorDisplayField>
        <errorMessage>&apos;Type of State Licensure&apos; may contain a value, If Association is &apos;State Licensure&apos;</errorMessage>
    </validationRules>
</CustomObject>